# load(":download.bzl", "fish_download_release")
load(":fish_toolchain.bzl", "fish_toolchain")

package(default_visibility = ["//visibility:private"])

exports_files(["fish_wrapper.sh", "rlocation.sh", "bazel.fish", "extension.bzl", "fish_toolchain.bzl"])

# fish_download_release(
#     name = "fishdownload",
#     version = "3.7.1",
#     sha256 = "614c9f5643cd0799df391395fa6bbc3649427bb839722ce3b114d3bbc1a3b250",
# )

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

fish_toolchain(
    name = "fish_linux",
)

# fish_toolchain(
#     name = "fish_osx",
# )

# fish_toolchain(
#     name = "fish_windows",
# )

toolchain(
    name = "fish_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":fish_linux",
    toolchain_type = ":toolchain_type",
)

# toolchain(
#     name = "fish_osx_toolchain",
#     exec_compatible_with = [
#         "@platforms//os:osx",
#         "@platforms//cpu:x86_64",
#     ],
#     target_compatible_with = [
#         "@platforms//os:osx",
#         "@platforms//cpu:x86_64",
#     ],
#     toolchain = ":fish_osx",
#     toolchain_type = ":toolchain_type",
# )

# toolchain(
#     name = "fish_windows_toolchain",
#     exec_compatible_with = [
#         "@platforms//os:windows",
#         "@platforms//cpu:x86_64",
#     ],
#     target_compatible_with = [
#         "@platforms//os:windows",
#         "@platforms//cpu:x86_64",
#     ],
#     toolchain = ":fish_windows",
#     toolchain_type = ":toolchain_type",
# )
