load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

# TODO(mbenson): pair down deps to source code - would be best to automate
filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "fish",
    lib_source = ":srcs",
    generate_args = [
        "-DFISH_USE_SYSTEM_PCRE2=ON",  # controls whether cmake will git fetch pcre2 and build it or if ON, use provided pcre2
        "-DMAC_CODESIGN_ID=OFF",
        "-DWITH_GETTEXT=OFF",
        "-DSYS_PCRE2_LIB=$(execpath //pcre2:pcre2_static)",
        # "-DCMAKE_INSTALL_PREFIX=.",
    ],
    deps = [
        "//pcre2:pcre2",
    ],
    data = [
        "//pcre2:pcre2_static",
    ],
    # TODO: how to fully capture outputs from make install? Will need share/ output for a lot of functionality.
    install = True,
    # TODO: how to get cmake to output to a normal directory?
    out_bin_dir = "../fish.build_tmpdir/",
    out_lib_dir = "../fish.build_tmpdir/",
    out_binaries = [
        "fish",
        "fish_indent",
        "fish_key_reader",
        "fish_test_helper",
    ],
    out_shared_libs = [],
    out_static_libs = ["libfishlib.a"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)
filegroup(
    name = "fish_bin",
    srcs = [":fish"],
    output_group = select({
        ":windows": "fish.exe",
        "//conditions:default": "fish",
    }),
)
